force-app/main/default/objects/Housing_Goal__c/Housing_Goal__c.object-meta.xml
<CustomObject>
    <label>Housing Goal</label>
    <nameField>
        <label>Housing Goals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>