force-app/main/default/objects/Housing_Goal__c/fields/Contact_Mgr_is_Housing_Goal_Creator_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mgr_is_Housing_Goal_Creator_Mgr__c</fullName>
    <formula>IF(
  Contact__r.Owner.ManagerId = CreatedBy.ManagerId,
  &quot;Team&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mgr is Housing Goal Creator Mgr</label>
    <type>Text</type>
</CustomField>