force-app/main/default/objects/Housing_Goal__c/fields/Contact_Owner_is_Housing_Goal_Creator__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_is_Housing_Goal_Creator__c</fullName>
    <formula>Contact__r.Owner.Id  = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner is Housing Goal Creator</label>
    <type>Checkbox</type>
</CustomField>