force-app/main/default/objects/Housing_Goal__c/fields/Housing_Goal__c.field-meta.xml
<CustomField>
    <fullName>Housing_Goal__c</fullName>
    <label>Housing Goal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Housing_Goals</valueSetName>
    </valueSet>
</CustomField>