force-app/main/default/objects/Housing_Goal__c/fields/Housing_Goal_Count__c.field-meta.xml
<CustomField>
    <fullName>Housing_Goal_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Goal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>