force-app/main/default/objects/Housing_Goal__c/fields/Housing_Goal_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Goal_Ownership_Status__c</fullName>
    <formula>IF( 
  Contact_Owner_is_Housing_Goal_Creator__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Goal Ownership Status</label>
    <type>Text</type>
</CustomField>