force-app/main/default/objects/Housing_Goal__c/recordTypes/Long_Term_Housing_Goal.recordType-meta.xml
<RecordType>
    <fullName>Long_Term_Housing_Goal</fullName>
    <active>true</active>
    <label>Long Term Housing Goal</label>
</RecordType>