force-app/main/default/objects/Housing_Goal__c/recordTypes/Short_Term_Housing_Goal.recordType-meta.xml
<RecordType>
    <fullName>Short_Term_Housing_Goal</fullName>
    <active>true</active>
    <label>Short Term Housing Goal</label>
</RecordType>